Really fixed center alignment now

--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
 body{
 	background-color: grey;
-}
-h1{
-	margin-left: auto;
-	margin-right:auto;
+	text-align: center;
 }
